--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spoder Bot 13</title>
+</head>
+<body>
+   <h1>Spider Bot 13</h1> 
+   <h2>Creado por Kari</h2>
+   <p>Proyecto Académico</p>
+</body>
+</html>
