imagenes del spiderbot

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
    <h1>Spider Bot 13</h1> 
    <h2>Creado por Kari</h2>
    <p>Proyecto Académico</p>
+   <picture>
+    <img src="./assets/Spiderbot01.png" alt="">
+   </picture>
+     <picture>
+    <img src="./assets/Spiderbot02.png" alt="">
+   </picture>
+   
 </body>
 </html>
