--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
    <h2>Creado por Kari</h2>
    <p>Proyecto Académico</p>
    <picture>
-    <img src="./assets/Spiderbot01.png" alt="">
+    <img src="./assets/Spiderbot01.png" alt=""style="width: 500px; height: auto;">
    </picture>
      <picture>
-    <img src="./assets/Spiderbot02.png" alt="">
+    <img src="./assets/Spiderbot02.png" alt=""style="width: 500px; height: auto;">
    </picture>
-   
+
 </body>
 </html>
