--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spoder Bot 13</title>
 </head>    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-
+<div class="img-fluid">
 <body>
    <h1>Spider Bot 13</h1> 
    <h2>Creado por Kari</h2>
    <p>Proyecto Académico</p>
    <picture>
-    <img src="./assets/Spiderbot01.png" alt=""style="width: 500px; height: auto;">
+    <img src="./assets/Spiderbot01.png" alt="style="width: 500px; height: auto;">
    </picture>
      <picture>
-    <img src="./assets/Spiderbot02.png" alt=""style="width: 500px; height: auto;">
+    <img src="./assets/Spiderbot02.png" alt="style="width: 500px; height: auto;">
    </picture>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
- 
+ </div>
 </body>
 </html>
