--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Spoder Bot 13</title>
 </head>
 <body>
-   <h1>Spider Bot 13</h1> 
-   <h2>Creado por Kari</h2>
-   <p>Proyecto Académico</p>
-   <picture>
-    <img src="./assets/Spiderbot01.png" alt="">
-   </picture>
-     <picture>
-    <img src="./assets/Spiderbot02.png" alt="">
-   </picture>
-   
+  <div class="img-fluid">
+  <h1>Spiderbot 18</h1>  
+  <h2>Creado por Diana Zarate</h2>
+  <p>Proyecto Academico</p>
+  <picture>
+    <img src="./assets/Spiderbot01.png" class="img-fluid" alt="">
+  </picture>
+    <picture>
+    <img src="./assets/Spiderbot02.png" class="img-fluid" alt="">
+  </picture>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  </div>
 </body>
 </html>
+ 
