--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <h2>Creado por Diana Zarate</h2>
   <p>Proyecto Academico</p>
   <picture>
-    <img src="./assets/Spiderbot01.png" class="img-fluid" alt="">
+    <img src="./assets/Spiderbot01.png" class="img-fluid" alt=">
   </picture>
     <picture>
-    <img src="./assets/Spiderbot02.png" class="img-fluid" alt="">
+    <img src="./assets/Spiderbot02.png" class="img-fluid" alt=">
   </picture>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </div>
