--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spoder Bot 13</title>
+    <title>Spider Bot 13</title>
 </head>
 <body>
   <div class="img-fluid">
-  <h1>Spiderbot 18</h1>  
-  <h2>Creado por Diana Zarate</h2>
+  <h1>Spiderbot 13</h1>  
+  <h2>Creado por Brenda Karina
   <p>Proyecto Academico</p>
   <picture>
-    <img src="./assets/Spiderbot01.png" class="img-fluid" alt=">
+    <img src="./assets/Spiderbot01.png" class="img-fluid" alt=""style="width: 500px; height: auto;")
+
   </picture>
     <picture>
-    <img src="./assets/Spiderbot02.png" class="img-fluid" alt=">
+    <img src="./assets/Spiderbot02.png" class="img-fluid" alt=""style="width: 500px; height: auto;"
   </picture>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </div>
