--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <h2>Creado por Brenda Karina
   <p>Proyecto Academico</p>
   <picture>
-    <img src="./assets/Spiderbot01.png" class="img-fluid" alt=""style="width: 500px; height: auto;")
+    <img src="./assets/Spiderbot01.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
 
   </picture>
     <picture>
-    <img src="./assets/Spiderbot02.png" class="img-fluid" alt=""style="width: 500px; height: auto;"
+    <img src="./assets/Spiderbot02.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
   </picture>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </div>
