--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="img-fluid">
   <h1>Spiderbot 13</h1>  
-  <h2>Creado por Brenda Karina :D
+  <h2>Creado por Brenda Karina :D</h2>
   <p>Proyecto Academico</p>
   <picture>
     <img src="./assets/Spiderbot01.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
