--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Spider Bot 13</title>
 </head>
 <body>
-  <div class="img-fluid">
+  <div class="container-fluid">
   <h1>Spiderbot 13</h1>  
   <h2>Creado por Brenda Karina :D</h2>
   <p>Proyecto Academico</p>
