--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="./css/style.css">
     
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-    }
+  body {
+    font-family: 'Roboto', sans-serif;
+    background-image: url('./assets/fondo.jpg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
   </style>
 </head>
 <body>
@@ -19,10 +24,10 @@
   <h2>Creado por Brenda Karina :D</h2>
   <p>Proyecto Academico</p>
   <picture>
-    <img src="./assets/Spiderbot01.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
+    <img src="./assets/spiderbot1.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
   </picture>
     <picture>
-    <img src="./assets/Spiderbot02.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
+    <img src="./assets/spiderbot2.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
   </picture>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </div>
