--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    h1, h2, p {
+  color: white;
+  text-shadow: 1px 1px 2px #000;
   }
   </style>
 </head>
