--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="./css/style.css">
     
   <style>
-  body {
-    font-family: 'Roboto', sans-serif;
+   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+<style>
+  h1, h2 {
+    font-family: 'Orbitron', sans-serif;
+
     background-image: url('./assets/fondo.jpg.jpg');
     background-size: cover;
     background-position: center;
@@ -22,6 +25,7 @@
   </style>
 </head>
 <body>
+  
   <div class="container-fluid">
   <h1>Spiderbot 13</h1>  
   <h2>Creado por Brenda Karina :D</h2>
