--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   h1, h2 {
     font-family: 'Orbitron', sans-serif;
 
-    background-image: url('./assets/fondo.jpg.jpg');
+    background-image: url('./assets/fondo.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     h1, h2, p {
   color: white;
-  text-shadow: 1px 1px 2px #000;
+  text-shadow: 1px 2px 2px #000;
   }
   </style>
 </head>
