--- a/index.html
+++ b/index.html
@@ -1,43 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spider Bot 13</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    
-  <style>
-   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-<style>
-  h1, h2 {
-    font-family: 'Orbitron', sans-serif;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spider Bot 13</title>
 
-    background-image: url('./assets/fondo.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/style.css">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      position: relative;
+      margin: 0;
+    }
+
+    body::before {
+      content: "";
+      background-image: url('./assets/fondo.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      opacity: 0.5;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    .container-fluid {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      padding: 2rem;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+      margin-top: 2rem;
+    }
+
+    h1, h2 {
+      font-family: 'Orbitron', sans-serif;
+    }
+
     h1, h2, p {
-  color: white;
-  text-shadow: 1px 2px 2px #000;
-  }
+      color: white;
+      text-shadow: 1px 2px 2px #000;
+    }
   </style>
 </head>
+
 <body>
-  
-  <div class="container-fluid">
-  <h1>Spiderbot 13</h1>  
-  <h2>Creado por Brenda Karina :D</h2>
-  <p>Proyecto Academico</p>
-  <picture>
-    <img src="./assets/spiderbot1.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
-  </picture>
-    <picture>
-    <img src="./assets/spiderbot2.png" class="img-fluid" alt=""style="width: 500px; height: auto;">
-  </picture>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  </div>
-</body>
-</html>
- 
+  <div class="container-fluid text-center">
+    <h1>Spiderbot 13</h1>  
+    <h2>Creado por Brenda Karina!!!
