--- a/index.html
+++ b/index.html
@@ -34,15 +34,6 @@
       z-index: -1;
     }
 
-    .container-fluid {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(10px);
-      border-radius: 20px;
-      padding: 2rem;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-      margin-top: 2rem;
-    }
-
     h1, h2 {
       font-family: 'Orbitron', sans-serif;
     }
@@ -57,4 +48,12 @@
 <body>
   <div class="container-fluid text-center">
     <h1>Spiderbot 13</h1>  
-    <h2>Creado por Brenda Karina!!!
+    <h2>Creado por Brenda Karina!!! :D
+      <img src="./assets/spiderbot1.png" alt="Spiderbot 1" class="img-fluid bot-image" />
+
+    <img src="./assets/spiderbot2.png" alt="Spiderbot 2" class="img-fluid bot-image" />
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
