--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spider Bot 13</title>
 
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./css/style.css">
@@ -17,7 +15,6 @@
       position: relative;
       margin: 0;
     }
-
     body::before {
       content: "";
       background-image: url('./assets/fondo.jpg');
@@ -32,11 +29,9 @@
       height: 100%;
       z-index: -1;
     }
-
     h1, h2 {
       font-family: 'Orbitron', sans-serif;
     }
-
     h1, h2, p {
       color: white;
       text-shadow: 1px 2px 2px #000;
@@ -47,10 +42,10 @@
 <body>
   <div class="container-fluid text-center">
     <h1>Spiderbot 13</h1>  
-    <h2>Creado por Brenda Karina!!! :D
-      <img src="./assets/spiderbot1.png" alt="Spiderbot 1" class="img-fluid bot-image" />
-
-    <img src="./assets/spiderbot2.png" alt="Spiderbot 2" class="img-fluid bot-image" />
+    <h2>Creado por Brenda Karina!!!
+      <img src="./assets/spiderbot1.png" class="img-fluid" alt="">
+      <img src="./assets/spiderbot2.png" class="img-fluid" alt="">
+       <img src="./assets/floppa.jpg" class="img-fluid" alt="">
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
