--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <body>
   <div class="container-fluid text-center">
     <h1>Spiderbot 13</h1>  
-    <h2>Creado por Brenda Karina!!!
+    <h2>Creado por Brenda Karina!!!</h2>
+      <p>"Proyecto Academico"</p>
       <img src="./assets/spiderbot1.png" class="img-fluid" alt="">
       <img src="./assets/spiderbot2.png" class="img-fluid" alt="">
        <img src="./assets/floppa.jpg" class="img-fluid" alt="">
