--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
     h1, h2, p {
       color: white;
-      text-shadow: 1px 2px 2px #000;
+      text-shadow: 2px 2px 2px #ffffff;
     }
   </style>
 </head>
@@ -43,7 +43,7 @@
   <div class="container-fluid text-center">
     <h1>Spiderbot 13</h1>  
     <h2>Creado por Brenda Karina!!!</h2>
-      <p>"Proyecto Academico"</p>
+      <p>"Proyecto Académico"</p>
       <img src="./assets/spiderbot1.png" class="img-fluid" alt="">
       <img src="./assets/spiderbot2.png" class="img-fluid" alt="">
        <img src="./assets/floppa.jpg" class="img-fluid" alt="">
