--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
     h1, h2, p {
       color: white;
-      text-shadow: 2px 2px 2px #ffffff;
+      text-shadow: 1px 2px 2px #000;
     }
   </style>
 </head>
