--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
     <h1>Spiderbot 13</h1>  
     <h2>Creado por Brenda Karina!!!</h2>
       <p>"Proyecto Académico"</p>
-      <img src="./assets/spiderbot1.png" class="img-fluid" alt="">
-      <img src="./assets/spiderbot2.png" class="img-fluid" alt="">
-       <img src="./assets/floppa.jpg" class="img-fluid" alt="">
+ <div class="image-container">
+      <img src="./assets/spiderbot1.png" alt="">
+      <img src="./assets/spiderbot2.png" alt="">
+      <img src="./assets/floppa.jpg" class="floppa" alt=""> <!-- Imagen Floppa en nueva fila -->
+    </div>
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
