--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
       color: white;
       text-shadow: 1px 2px 2px #000;
     }
+    
+    /* Sistema de caja (Grid) */
+    .image-container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); /* Dos imágenes por fila */
+      gap: 16px; /* Espacio entre las imágenes */
+      justify-items: center; /* Centra las imágenes dentro de cada caja */
+      margin-top: 20px;
+    }
   </style>
 </head>
 
@@ -47,7 +56,7 @@
  <div class="image-container">
       <img src="./assets/spiderbot1.png" alt="">
       <img src="./assets/spiderbot2.png" alt="">
-      <img src="./assets/floppa.jpg" class="floppa" alt=""> <!-- Imagen Floppa en nueva fila -->
+      <img src="./assets/floppa.jpg" class="floppa" alt="">
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
