--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       position: relative;
       margin: 0;
     }
+
     body::before {
       content: "";
       background-image: url('./assets/fondo.jpg');
@@ -28,6 +29,7 @@
       width: 100%;
       height: 100%;
       z-index: -1;
+
     }
     h1, h2 {
       font-family: 'Orbitron', sans-serif;
@@ -40,10 +42,10 @@
     /* Sistema de caja (Grid) */
     .image-container {
       display: grid;
-      grid-template-columns: repeat(2, 1fr); /* Dos imágenes por fila */
-      gap: 16px; /* Espacio entre las imágenes */
-      justify-items: center; /* Centra las imágenes dentro de cada caja */
-      margin-top: 20px;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 16px;
+      justify-items: center;
+      margin-top: 30px;
     }
   </style>
 </head>
