--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-
     }
     h1, h2 {
       font-family: 'Orbitron', sans-serif;
@@ -59,7 +58,7 @@
       <img src="./assets/spiderbot1.png" alt="">
       <img src="./assets/spiderbot2.png" alt="">
       <img src="./assets/floppa.jpg" class="floppa" alt="">
-    </div>
+      <img src="https://i.gifer.com/origin/12/1261feb4a31558c56ebb1426df3c8262_w200.gif" class="floppa" alt="">
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
